// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBadge should match snapshot (auto-generated) 1`] = `
<Component
  aria-label="string"
  className="string"
  variant="plain"
>
  <span
    className="pf-c-notification-badge pf-m-unread"
  >
    <div>
      ReactNode
    </div>
  </span>
</Component>
`;

exports[`false NotificationBadge 1`] = `
<Component
  variant="plain"
>
  <span
    className="pf-c-notification-badge pf-m-unread"
  >
    unread
     Badge
  </span>
</Component>
`;

exports[`true NotificationBadge 1`] = `
<Component
  variant="plain"
>
  <span
    className="pf-c-notification-badge pf-m-read"
  >
    read
     Badge
  </span>
</Component>
`;
